<?xml version="1.0"?>
<package>
  <name>golfcart_2dnav</name>
  <version>0.0.0</version>
  <description>The golfcart_2dnav package</description>
  <maintainer email="ya.sagitov@gmail.com">Artur Sagitov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>
  <export>
  </export>
</package>