<?xml version="1.0"?>
<package>
  <name>golfcart_description</name>
  <version>0.1.0</version>
  <description>Golfcart model with ackermann steering</description>
  <maintainer email="ya.sagitov@gmail.com">Sagitov Artur</maintainer>
  <license>MIT</license>
  <author email="ya.sagitov@gmail.com">Artur</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <architecture_independent/>
  </export>
</package>
