<?xml version="1.0"?>
<package>
  <name>golfcart_gazebo</name>
  <version>0.1.0</version>
  <description>
    Golfcart is used with Gazebo to simulate a vehicle with
    Ackermann steering.
  </description>
  <maintainer email="a.sagitov@innopolis.ru">
    Artur
  </maintainer>
  <license>Apache 2.0</license>
  <author email="a.sagitov@innopolis.ru">Artur</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>ackermann_vehicle_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
